--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,15 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+.idea/FibonacciBenchmarking.rb.iml
+
+.idea/misc.xml
+
+.idea/vcs.xml
+
+.idea/modules.xml
+
+.idea/workspace.xml
+
+.idea/.name
